<resources>
    <string name="app_name">iFin</string>
    <string name="copyright_message">© 2022 iFin. All Rights Reserved.</string>
    <string name="from_uppercase">FROM</string>
    <string name="team_name">Bella Ciao</string>
    <string name="get_started">Get Started</string>
    <string name="with_one_click_check_your_credit_worthiness">Find available banks which can give you credit or why they can\'t give you credit.</string>
    <string name="credit_worthiness">Credit worthiness</string>
    <string name="identification">Identification</string>
    <string name="authorize">Authorize</string>
    <string name="so_m">so\'m</string>

    <string name="instruction"><u>How to fill these fields?</u></string>

    <string name="credit_type">Credit type</string>
    <string name="the_type_which_is_set_by_the_bank">The type which is set by the Bank</string>
    <string name="credit_value">Credit value</string>
    <string name="the_equivalent_monetary_value_excluding_the_deposit_which_can_be_used_towards_the_services">The equivalent monetary value (excluding the Deposit), which can be used towards the Services.</string>
    <string name="credit_period">Credit period</string>
    <string name="the_number_of_days_that_allowed_to_wait_before_paying_an_invoice">The number of days that allowed to wait before paying an invoice</string>

    <string name="check_your_credit_history">Check your Credit history</string>
    <string name="check_your_income_history">Check your Income history</string>
    <string name="check_suitable_and_unsuitable_redits">Check suitable and unsuitable сredits</string>

    <string name="pay_with_payme">Pay with Payme</string>
    <string name="price">Price</string>
    <string name="_40000_so_m">40000 so\'m</string>
    <string name="i_hereby_give_my_consent_to_the_processing_of_personal_data">I hereby give my consent to the processing of personal data</string>
    <string name="i_agree_with_the_public_offer">I agree with the public offer</string>

</resources>