<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:adjustViewBounds="true"
        android:src="@drawable/image_launch" />

    <TextView
        style="@style/TextStyle.Bold"
        android:layout_marginTop="60dp"
        android:textSize="22sp"
        android:text="@string/credit_worthiness"
        android:textColor="@color/color_black" />

    <TextView
        style="@style/TextStyle"
        android:layout_marginTop="10dp"
        android:alpha="0.9"
        android:textSize="16sp"
        android:text="@string/with_one_click_check_your_credit_worthiness"
        android:textColor="@color/color_font" />

    <Button
        style="@style/TextStyle.Bold"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textSize="18sp" />

</LinearLayout>